--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+2008-03-29	Hatuka*nezumi - IKEDA Soji	<hatuka@nezumi.nu>
+	* Release 1.003.
+	* Added ESTI GSM 03.38 which won't be used for MIME
+	  messages (experimental).
+	* _Compat.pm: resolve_alias(): real aliasing taken from
+	  Encode module.
+	* Added test for aliases.
+	* Typo in PODs.
+
 2008-03-20	Hatuka*nezumi - IKEDA Soji	<hatuka@nezumi.nu>
 	* Release 1.002.
 	* New method undecode().
