--- a/Changes
+++ b/Changes
@@ -1,20 +1,23 @@
-2008-XX-XX	Hatuka*nezumi - IKEDA Soji	<hatuka@nezumi.nu>
-	* Release 1.0XX.
-	* Bug Fix: CPAN RT #34909: Test failures (fixed at 1.006.1).
-	* Bug Fix: CPAN RT #35070: HZ words are encoded as US-ASCII:
-	  added workaround for CPAN RT #35120 (fixed at 1.006.2).
-	* Perl 5.11.0: Suppress ``Use of uninitialized value
+2008-04-17	Hatuka*nezumi - IKEDA Soji	<hatuka@nezumi.nu>
+
+	* Release 1.006.2 - bug fixes only; no new features.
+	* Bug Fix: Perl >= 5.8.1: CPAN RT #34909: Test failures.
+	* Bug Fix: Perl >= 5.10.0: CPAN RT #35070: HZ words are
+	  encoded as US-ASCII; added workaround for CPAN RT #35120.
+	* Fix: Perl 5.11.0: Suppress ``Use of uninitialized value
 	  within @_ in uc'' warnings.
 	* JA_JP.pod: Clarify distinction between ``符号化'' (on
 	  charset) and ``エンコード'' (on encoding).
 
 2008-04-12	Hatuka*nezumi - IKEDA Soji	<hatuka@nezumi.nu>
+
 	* Release 1.006.
 	* Workarounds for ``US-ASCII transformation'' charsets
 	  i.e. HZ-GB-2312 (RFC1842) and UTF-7 (RFC 2152).
 	* Added tests.
 
 2008-04-07	Hatuka*nezumi - IKEDA Soji	<hatuka@nezumi.nu>
+
 	* Release 1.005.
 	* _enclen_Q(): Restrict characters in encoded-word
 	  according to RFC 2047 section 5 (3).
@@ -23,6 +26,7 @@
 	  US-ASCII: Works on pre-Encode environments.
 
 2008-03-30	Hatuka*nezumi - IKEDA Soji	<hatuka@nezumi.nu>
+
 	* Release 1.004.
 	* Added ESTI GSM 03.38 which won't be used for MIME
 	  messages (experimental).
@@ -33,6 +37,7 @@
 	* Bug Fix: Perl <=5.005: our is ``withdrawn''.
 
 2008-03-20	Hatuka*nezumi - IKEDA Soji	<hatuka@nezumi.nu>
+
 	* Release 1.002.
 	* New method undecode().
 	* encoder(): added argument to set instance.
