Corrected META.yml & PODs. Removed duplicated docs.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+2008-XX-XX	Hatuka*nezumi - IKEDA Soji	<hatuka@nezumi.nu>
+
+	* Release 1.00X.
+	* Corrected META.yml & PODs.  Removed duplicated docs.
+
 2008-04-17	Hatuka*nezumi - IKEDA Soji	<hatuka@nezumi.nu>
 
 	* Release 1.006.2 - bug fixes only; no new features.
