--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 2008-XX-XX	Hatuka*nezumi - IKEDA Soji	<hatuka@nezumi.nu>
 
-	* Release 1.00X.
+	* Release X.XXX.
+	* New function: detect_7bit_charset().
+	* Bundle inc::Module::Install.
 	* Corrected META.yml & PODs.  Removed duplicated docs.
 
 2008-04-17	Hatuka*nezumi - IKEDA Soji	<hatuka@nezumi.nu>
