--- a/Charset/JA_JP.pod
+++ b/Charset/JA_JP.pod
@@ -1,3 +1,7 @@
+#-*- perl -*-
+
+$VERSION = '1.007_01';
+
 =encoding utf-8
 
 =head1 NAME
@@ -13,7 +17,7 @@ MIME::Charset::JA_JP - MIME のためのキャラクタセット情報
 キャラクタセット情報の取得:
 
     $benc = $charset->body_encoding; # 例 "Q"
-    $cset = $charset->canonical_charset; # 例 "US-ASCII"
+    $cset = $charset->as_string; # 例 "US-ASCII"
     $henc = $charset->header_encoding; # 例 "S"
     $cset = $charset->output_charset; # 例 "ISO-2022-JP"
 
@@ -22,20 +26,23 @@ MIME::Charset::JA_JP - MIME のためのキャラクタセット情報
     ($text, $charset, $encoding) =
         $charset->header_encode(
            "\xc9\xc2\xc5\xaa\xc0\xde\xc3\xef\xc5\xaa".
-           "\xc7\xd1\xca\xaa\xbd\xd0\xce\xcf\xb4\xef");
-    # ...例えば (<converted>, "ISO-2022-JP", "B") を返す
+           "\xc7\xd1\xca\xaa\xbd\xd0\xce\xcf\xb4\xef",
+           Charset => 'euc-jp');
+    # ...例えば (<変換ずみ文字列>, "ISO-2022-JP", "B") を返す。
 
     ($text, $charset, $encoding) =
         $charset->body_encode(
-            "Collectioneur path\xe9tiquement ".
-    # ...例えば (<original>, "ISO-8859-1", "QUOTED-PRINTABLE") を返す
+            "Collectioneur path\xe9tiquement ",
+            Charset => 'latin1');
+    # ...例えば (<元の文字列>, "ISO-8859-1", "QUOTED-PRINTABLE") を返す。
 
     $len = $charset->encoded_header_len(
-        "Perl\xe8\xa8\x80\xe8\xaa\x9e", "b"); # 例 28
+        "Perl\xe8\xa8\x80\xe8\xaa\x9e",
+        Charset => "utf-8",
+        Encoding => "b");
+    # ...例えば 28 を返す。
 
 モジュール既定値の操作:
-
-    use MIME::Charset;
 
     MIME::Charset::alias("csEUCKR", "euc-kr");
     MIME::Charset::default("iso-8859-1");
@@ -492,12 +499,15 @@ L<http://hatuka.nezumi.nu/repos/MIME-Charset/> にある。
 
 Multipurpose Internet Mail Extensions (MIME).
 
-=head1 AUTHORS
+=head1 AUTHOR
 
-Copyright (C) 2006-2008 Hatuka*nezumi - IKEDA Soji <hatuka(at)nezumi.nu>.
+Hatuka*nezumi - IKEDA Soji <hatuka(at)nezumi.nu>
 
-All rights reserved.  This program is free software; you can redistribute
-it and/or modify it under the same terms as Perl itself.
+=head1 COPYRIGHT
+
+Copyright (C) 2006-2008 Hatuka*nezumi - IKEDA Soji.
+This program is free software; you can redistribute it and/or modify it
+under the same terms as Perl itself.
 
 
 =cut
