--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ XXXX-XX-XX	Hatuka*nezumi - IKEDA Soji	<hatuka(at)nezumi.nu>
 
 	* Release 1.008.1.
 	* No new features.  Just for typos and eyesore messages.
-	* Imp: Supports Unicode/multibyte on Perl 5.7.3.
+	* Imp: Supports Unicode/multibyte on Perl 5.7.3 (experimental).
 	* Perl 5.7.3 & 5.8.3:
 	  avoid ``Useless use of a constant in void context'' warnings.
 	* Doc: small fixes.
