--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
-XXXX-XX-XX	Hatuka*nezumi - IKEDA Soji	<hatuka(at)nezumi.nu>
+2011-02-19	Hatuka*nezumi - IKEDA Soji	<hatuka(at)nezumi.nu>
 
 	* Release 1.008.1.
-	* No new features.  Just for typos and eyesore messages.
+	* Chg: Workaround for CPAN RT #65796: Deep recursion error finding
+	  invalid charset.  Limit length of charset name upto 75.
 	* Imp: Supports Unicode/multibyte on Perl 5.7.3 (experimental).
 	* Perl 5.7.3 & 5.8.3:
 	  avoid ``Useless use of a constant in void context'' warnings.
