--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl module MIME::Charset.
 
+1.013_01  2022-08-08  Hatuka*nezumi - IKEDA Soji  <hatuka(at)nezumi.nu>
+
+    * Imp: Added support for DIN 66003.
+    * Chg: Workaround: "ISO-8859-8-I" is treated as an alias of "ISO-8859-8"
+      by Encode (3.18): See the note in
+      https://encoding.spec.whatwg.org/#legacy-single-byte-encodings
+      However we'll treat these as separate names for compatibility.
+
 1.012.2  2017-04-11  Hatuka*nezumi - IKEDA Soji  <hatuka(at)nezumi.nu>
 
     * Fix: Perl >= 5.26: Makefile.PL cannot use inc::Module::Install.
