--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl module MIME::Charset.
 
+1.013.1  2022-08-12  Hatuka*nezumi - IKEDA Soji  <hatuka(at)nezumi.nu>
+
+    * No new features.
+    * Update META.json.
+
 1.013  2022-08-09  Hatuka*nezumi - IKEDA Soji  <hatuka(at)nezumi.nu>
 
     * Update tests.
